--- a/groups_and_users.ipynb
+++ b/groups_and_users.ipynb
@@ -613,6 +613,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Option 1:\n",
+    "loop through columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -673,6 +681,95 @@
    ],
    "source": [
     "groups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Option 2\n",
+    "unstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "group01  user01      x\n",
+       "         user02      x\n",
+       "         user03      x\n",
+       "         user04      x\n",
+       "         user05      x\n",
+       "         user06      x\n",
+       "         user07      x\n",
+       "         user08      x\n",
+       "         user09      x\n",
+       "         user10      x\n",
+       "         user11      x\n",
+       "         user12      x\n",
+       "         user13      x\n",
+       "         user14      x\n",
+       "         user15      x\n",
+       "         user16      x\n",
+       "         user17      x\n",
+       "         user18      x\n",
+       "         user19      x\n",
+       "         user20      x\n",
+       "group02  user01      x\n",
+       "         user02    NaN\n",
+       "         user03    NaN\n",
+       "         user04    NaN\n",
+       "         user05    NaN\n",
+       "         user06    NaN\n",
+       "         user07    NaN\n",
+       "         user08    NaN\n",
+       "         user09    NaN\n",
+       "         user10    NaN\n",
+       "                  ... \n",
+       "group19  user11      x\n",
+       "         user12      x\n",
+       "         user13      x\n",
+       "         user14      x\n",
+       "         user15    NaN\n",
+       "         user16    NaN\n",
+       "         user17    NaN\n",
+       "         user18    NaN\n",
+       "         user19    NaN\n",
+       "         user20    NaN\n",
+       "group20  user01    NaN\n",
+       "         user02    NaN\n",
+       "         user03    NaN\n",
+       "         user04    NaN\n",
+       "         user05    NaN\n",
+       "         user06    NaN\n",
+       "         user07    NaN\n",
+       "         user08    NaN\n",
+       "         user09    NaN\n",
+       "         user10    NaN\n",
+       "         user11    NaN\n",
+       "         user12    NaN\n",
+       "         user13    NaN\n",
+       "         user14    NaN\n",
+       "         user15      x\n",
+       "         user16      x\n",
+       "         user17      x\n",
+       "         user18      x\n",
+       "         user19      x\n",
+       "         user20      x\n",
+       "Length: 400, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.unstack()"
    ]
   },
   {
