--- a/groups_and_users.ipynb
+++ b/groups_and_users.ipynb
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -763,13 +763,101 @@
        "Length: 400, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.unstack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### unstack and select 'x'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "group01  user01    x\n",
+       "         user02    x\n",
+       "         user03    x\n",
+       "         user04    x\n",
+       "         user05    x\n",
+       "         user06    x\n",
+       "         user07    x\n",
+       "         user08    x\n",
+       "         user09    x\n",
+       "         user10    x\n",
+       "         user11    x\n",
+       "         user12    x\n",
+       "         user13    x\n",
+       "         user14    x\n",
+       "         user15    x\n",
+       "         user16    x\n",
+       "         user17    x\n",
+       "         user18    x\n",
+       "         user19    x\n",
+       "         user20    x\n",
+       "group02  user01    x\n",
+       "         user20    x\n",
+       "group03  user02    x\n",
+       "         user14    x\n",
+       "         user15    x\n",
+       "         user16    x\n",
+       "group04  user03    x\n",
+       "         user17    x\n",
+       "group05  user04    x\n",
+       "         user17    x\n",
+       "                  ..\n",
+       "group11  user18    x\n",
+       "group12  user05    x\n",
+       "         user18    x\n",
+       "group13  user04    x\n",
+       "         user19    x\n",
+       "group14  user03    x\n",
+       "         user19    x\n",
+       "group15  user02    x\n",
+       "         user19    x\n",
+       "group16  user01    x\n",
+       "         user19    x\n",
+       "group17  user02    x\n",
+       "         user03    x\n",
+       "         user04    x\n",
+       "         user05    x\n",
+       "group18  user06    x\n",
+       "         user07    x\n",
+       "         user08    x\n",
+       "         user09    x\n",
+       "group19  user10    x\n",
+       "         user11    x\n",
+       "         user12    x\n",
+       "         user13    x\n",
+       "         user14    x\n",
+       "group20  user15    x\n",
+       "         user16    x\n",
+       "         user17    x\n",
+       "         user18    x\n",
+       "         user19    x\n",
+       "         user20    x\n",
+       "Length: 71, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.unstack()[df.unstack() == 'x']"
    ]
   },
   {
