new sample data

--- a/groups_and_users.ipynb
+++ b/groups_and_users.ipynb
@@ -634,7 +634,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in df.columns:\n",
@@ -858,6 +860,472 @@
    ],
    "source": [
     "df.unstack()[df.unstack() == 'x']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example with sample file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_excel('SecurityFile.xlsx', index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee Name</th>\n",
+       "      <th>Windows account</th>\n",
+       "      <th>Windows domain</th>\n",
+       "      <th>Tableau desktop key</th>\n",
+       "      <th>Tableau desktop version</th>\n",
+       "      <th>Tableau desktop expiration date</th>\n",
+       "      <th>Tableau server account</th>\n",
+       "      <th>Initial password</th>\n",
+       "      <th>Tableau name</th>\n",
+       "      <th>SiteRole (always Interactor)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DS_BPS+</th>\n",
+       "      <th>DS_Connector</th>\n",
+       "      <th>DS_DesktopUsers</th>\n",
+       "      <th>CNT_BPS</th>\n",
+       "      <th>CNT_Sensitive</th>\n",
+       "      <th>CNT_ColumnRest</th>\n",
+       "      <th>CNT_AUTO</th>\n",
+       "      <th>CNT_IND</th>\n",
+       "      <th>WB_BPS_PUBL</th>\n",
+       "      <th>WB_CEAC_PUBL_1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMEI</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>136696</th>\n",
+       "      <td>LEVEILLE PIERRICK</td>\n",
+       "      <td>LEVEILPI</td>\n",
+       "      <td>EUROPE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136696</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Leveille Pierrick</td>\n",
+       "      <td>Interactor</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136697</th>\n",
+       "      <td>SAMWISE GAMGEE</td>\n",
+       "      <td>SAMGAM</td>\n",
+       "      <td>SHIRE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136697</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Samwise</td>\n",
+       "      <td>Interactor</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136698</th>\n",
+       "      <td>GLORFINDEL</td>\n",
+       "      <td>GLORGON</td>\n",
+       "      <td>GONDOLIN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136698</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Glorfindel</td>\n",
+       "      <td>Interactor</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136699</th>\n",
+       "      <td>GRIMA WORMTONGUE</td>\n",
+       "      <td>GRIWOR</td>\n",
+       "      <td>ISENGARD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136699</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Grima</td>\n",
+       "      <td>Interactor</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136700</th>\n",
+       "      <td>MERIADOC BRANDYBUCK</td>\n",
+       "      <td>MERBRA</td>\n",
+       "      <td>SHIRE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136700</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Meriadoc</td>\n",
+       "      <td>Interactor</td>\n",
+       "      <td>...</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Employee Name Windows account Windows domain  \\\n",
+       "AMEI                                                         \n",
+       "136696    LEVEILLE PIERRICK        LEVEILPI         EUROPE   \n",
+       "136697       SAMWISE GAMGEE          SAMGAM          SHIRE   \n",
+       "136698           GLORFINDEL         GLORGON       GONDOLIN   \n",
+       "136699     GRIMA WORMTONGUE          GRIWOR       ISENGARD   \n",
+       "136700  MERIADOC BRANDYBUCK          MERBRA          SHIRE   \n",
+       "\n",
+       "        Tableau desktop key  Tableau desktop version  \\\n",
+       "AMEI                                                   \n",
+       "136696                  NaN                      NaN   \n",
+       "136697                  NaN                      NaN   \n",
+       "136698                  NaN                      NaN   \n",
+       "136699                  NaN                      NaN   \n",
+       "136700                  NaN                      NaN   \n",
+       "\n",
+       "        Tableau desktop expiration date  Tableau server account  \\\n",
+       "AMEI                                                              \n",
+       "136696                              NaN                  136696   \n",
+       "136697                              NaN                  136697   \n",
+       "136698                              NaN                  136698   \n",
+       "136699                              NaN                  136699   \n",
+       "136700                              NaN                  136700   \n",
+       "\n",
+       "        Initial password       Tableau name SiteRole (always Interactor)  \\\n",
+       "AMEI                                                                       \n",
+       "136696               NaN  Leveille Pierrick                   Interactor   \n",
+       "136697               NaN            Samwise                   Interactor   \n",
+       "136698               NaN         Glorfindel                   Interactor   \n",
+       "136699               NaN              Grima                   Interactor   \n",
+       "136700               NaN           Meriadoc                   Interactor   \n",
+       "\n",
+       "            ...       DS_BPS+ DS_Connector DS_DesktopUsers CNT_BPS  \\\n",
+       "AMEI        ...                                                      \n",
+       "136696      ...             X          NaN             NaN       X   \n",
+       "136697      ...             X          NaN             NaN     NaN   \n",
+       "136698      ...             X            X               X       X   \n",
+       "136699      ...             X          NaN               X     NaN   \n",
+       "136700      ...             X            X             NaN     NaN   \n",
+       "\n",
+       "       CNT_Sensitive CNT_ColumnRest CNT_AUTO CNT_IND WB_BPS_PUBL  \\\n",
+       "AMEI                                                               \n",
+       "136696             X            NaN      NaN     NaN           X   \n",
+       "136697           NaN            NaN      NaN     NaN         NaN   \n",
+       "136698             X              X        X       X           X   \n",
+       "136699             X            NaN        X     NaN         NaN   \n",
+       "136700           NaN              X      NaN     NaN         NaN   \n",
+       "\n",
+       "       WB_CEAC_PUBL_1  \n",
+       "AMEI                   \n",
+       "136696            NaN  \n",
+       "136697            NaN  \n",
+       "136698              X  \n",
+       "136699            NaN  \n",
+       "136700            NaN  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loop through columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "group_columns =[\"IT - administration\",\n",
+    "                \"DS_BPS\",\"DS_BPS+\",\"DS_Connector\",\"DS_DesktopUsers\",\"CNT_BPS\",\"CNT_Sensitive\",\"CNT_ColumnRest\",\n",
+    "                \"CNT_AUTO\",\"CNT_IND\",\"WB_BPS_PUBL\",\"WB_CEAC_PUBL_1\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "groups2 = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in group_columns:\n",
+    "    groups2[i] = df2[df2[i] =='X'].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CNT_AUTO': Int64Index([136698, 136699], dtype='int64', name='AMEI'),\n",
+       " 'CNT_BPS': Int64Index([136696, 136698], dtype='int64', name='AMEI'),\n",
+       " 'CNT_ColumnRest': Int64Index([136698, 136700], dtype='int64', name='AMEI'),\n",
+       " 'CNT_IND': Int64Index([136698], dtype='int64', name='AMEI'),\n",
+       " 'CNT_Sensitive': Int64Index([136696, 136698, 136699], dtype='int64', name='AMEI'),\n",
+       " 'DS_BPS': Int64Index([136698], dtype='int64', name='AMEI'),\n",
+       " 'DS_BPS+': Int64Index([136696, 136697, 136698, 136699, 136700], dtype='int64', name='AMEI'),\n",
+       " 'DS_Connector': Int64Index([136698, 136700], dtype='int64', name='AMEI'),\n",
+       " 'DS_DesktopUsers': Int64Index([136698, 136699], dtype='int64', name='AMEI'),\n",
+       " 'IT - administration': Int64Index([136697, 136698], dtype='int64', name='AMEI'),\n",
+       " 'WB_BPS_PUBL': Int64Index([136696, 136698], dtype='int64', name='AMEI'),\n",
+       " 'WB_CEAC_PUBL_1': Int64Index([136698], dtype='int64', name='AMEI')}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                     AMEI  \n",
+       "IT - administration  136697    X\n",
+       "                     136698    X\n",
+       "DS_BPS               136698    X\n",
+       "DS_BPS+              136696    X\n",
+       "                     136697    X\n",
+       "                     136698    X\n",
+       "                     136699    X\n",
+       "                     136700    X\n",
+       "DS_Connector         136698    X\n",
+       "                     136700    X\n",
+       "DS_DesktopUsers      136698    X\n",
+       "                     136699    X\n",
+       "CNT_BPS              136696    X\n",
+       "                     136698    X\n",
+       "CNT_Sensitive        136696    X\n",
+       "                     136698    X\n",
+       "                     136699    X\n",
+       "CNT_ColumnRest       136698    X\n",
+       "                     136700    X\n",
+       "CNT_AUTO             136698    X\n",
+       "                     136699    X\n",
+       "CNT_IND              136698    X\n",
+       "WB_BPS_PUBL          136696    X\n",
+       "                     136698    X\n",
+       "WB_CEAC_PUBL_1       136698    X\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.unstack()[df2.unstack()=='X']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df3 = df2.unstack()[df2.unstack()=='X']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                     AMEI  \n",
+       "IT - administration  136697    X\n",
+       "                     136698    X\n",
+       "DS_BPS               136698    X\n",
+       "DS_BPS+              136696    X\n",
+       "                     136697    X\n",
+       "                     136698    X\n",
+       "                     136699    X\n",
+       "                     136700    X\n",
+       "DS_Connector         136698    X\n",
+       "                     136700    X\n",
+       "DS_DesktopUsers      136698    X\n",
+       "                     136699    X\n",
+       "CNT_BPS              136696    X\n",
+       "                     136698    X\n",
+       "CNT_Sensitive        136696    X\n",
+       "                     136698    X\n",
+       "                     136699    X\n",
+       "CNT_ColumnRest       136698    X\n",
+       "                     136700    X\n",
+       "CNT_AUTO             136698    X\n",
+       "                     136699    X\n",
+       "CNT_IND              136698    X\n",
+       "WB_BPS_PUBL          136696    X\n",
+       "                     136698    X\n",
+       "WB_CEAC_PUBL_1       136698    X\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.concat"
    ]
   },
   {
